--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,18 @@ header {
 .navbar {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     list-style: none;
     margin-left: 0;
     margin-top: 0;
     margin-bottom: 0;
     padding: 0;
+}
+
+.navbar section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .navbar li {
